Animation using Clock

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "esbuild": "^0.25.2",
     "fdir": "^6.4.4",
+    "gsap": "^3.5.1",
     "nanoid": "^3.3.11",
     "picocolors": "^1.1.1",
     "picomatch": "^4.0.2",
