Resize and fullscreen

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "start": "vite --host"
   },
   "keywords": [],
   "author": "",
