--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "esbuild": "^0.25.2",
     "fdir": "^6.4.4",
     "gsap": "^3.5.1",
+    "lil-gui": "^0.20.0",
     "nanoid": "^3.3.11",
     "picocolors": "^1.1.1",
     "picomatch": "^4.0.2",
